# alkye-assignment

./: .env.example  .gitignore  AI_USAGE.md  COMPLETION_SUMMARY.md  Cargo.toml  EVALUATOR_CHECKLIST.md  IMPLEMENTATION_GUIDE.md  INDEX.md  QUICKSTART.md  README.md  START_HERE.md  SUBMISSION.md  docker-compose.yml  test_workflow.sh  validate.sh
migrations/: 20240623000001_init.sql
src/: auth.rs  cache.rs  db.rs  error.rs  handlers.rs  lib.rs  main.rs  middleware.rs  models.rs
tests/: validation_flow.rs
