[package]
name = "task_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
argon2 = "0.5"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
redis = { version = "0.24", features = ["aio", "tokio-comp", "connection-manager"] }
anyhow = "1"
thiserror = "1"
rand = "0.8"
futures = "0.3"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
dotenv = "0.15"
